kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP  # Varsayılan ClusterIP, isteğe bağlı olarak NodePort veya LoadBalancer kullanabilirsiniz
