kubernetes/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingresss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Yani, gelen HTTP istekleri doğrudan HTTP olarak yönlendirilir ve HTTPS'e yönlendirilmez.
spec:
  rules:
  - host: backend.app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
